--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -38,9 +38,11 @@
   background-color: rgba(121, 118, 171, 0.1);
 }
 
+.table-of-contents__left-border {
+  border-left: 3px solid var(--ifm-toc-border-color);
+}
 
 .table-of-contents {
-  border-left-width: 3px;
   font-weight: var(--ifm-font-weight-semibold);
 }
 
